--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item">
             <a href="./portfolio.html" class="nav-link">Портфоліо</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="contacts">
