--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,11 @@
             <a href="./index.html" class="nav-link">Студія</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link active">Портфоліо</a>
+            <a href="./portfolio.html" class="nav-link active">Портфоліо</a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+          <li class="nav-item">
+            <a href="./portfolio.html" class="nav-link">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="contacts">
