--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,12 @@
         </ul>
       </nav>
       <ul class="contacts">
-        <li class="contact-item">
+        <li class="contacts-item">
           <a href="mailto:info@devstudio.com" class="contacts-link"
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-item">
+        <li class="contacts-item">
           <a href="tel:++380961111111" class="contacts-link"
             >+38 096 111 11 11</a
           >
