--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
           <li class="nav-item">
             <a href="./portfolio.html" class="nav-link">Портфоліо</a>
           </li>
-          <li class="nav-item"><a href="./index.html" class="nav-link">Контакти</a></li>
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="contacts">
-        <li class="contact-item">
+        <li class="contacts-item">
           <a href="mailto:info@devstudio.com" class="contacts-link"
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-item">
+        <li class="contacts-item">
           <a href="tel:++380961111111" class="contacts-link"
             >+38 096 111 11 11</a
           >
