--- a/index.html
+++ b/index.html
@@ -58,22 +58,30 @@
         <ul class="about">
           <li class="about-item">
             <h3 class="about-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
+            <p class="about-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li class="about-item">
             <h3 class="about-title">ПУНКТУАЛЬНІСТЬ</h3>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
+            <p class="about-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
           <li class="about-item">
             <h3 class="about-title">ПЛАНУВАННЯ</h3>
-            Так само консультація з широким активом значною мірою зумовлює.
+            <p class="about-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li class="about-item">
             <h3 class="about-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
+            <p class="about-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
       </section>
